# InfernalCV

./: .gitignore  README.md  app.py  config.py  file_handler.py  llm_services.py  pyproject.toml
